syntax = "proto3";

package tattooapp.user.v1;

option go_package = "github.com/kbremont/tattoo-app/backend/api/proto/gen/go/tattooapp/user/v1;pb";

enum UserRole {
    USER_ROLE_UNSPECIFIED = 0;
    USER_ROLE_ARTIST = 1;
    USER_ROLE_CLIENT = 2;
}

enum TattooStyle {
    TATTOO_STYLE_UNSPECIFIED = 0;
    TATTOO_STYLE_AMERICAN_TRADITIONAL = 1;
    TATTOO_STYLE_REALISM = 2;
    TATTOO_STYLE_WATER_COLOR = 3;
    TATTOO_STYLE_JAPANESE_TRADITIONAL = 4;
}

message User {
    string id = 1;
    UserRole role = 2;
    string first_name = 3;
    string last_name = 4;
    string avatar_url = 5;
    string created_at = 6;
    string updated_at = 7;
    repeated TattooStyle style_preferences = 8;
}